feat: default server
